# choicetask

./: MANIFEST.in  Makefile  README.md  pyproject.toml
choicetask/: app_utils.py  choicetaskclass.py  colordict.py  exptobj.py  main.py  mboxes.py  psychtaskclass.py  quicknumbers.py  resource.py  sideparam.py  version.py
